// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for open: false 1`] = `
":host {
  display: block;
  all: unset !important;
  position: fixed !important;
  margin: 0 !important;
  padding: 0 !important;
  inset: auto auto var(--p-banner-position-bottom,56px) 50vw !important;
  width: min(calc(100vw - 2 * var(--p-banner-offset-inline, max(22px, 10.625vw - 12px))), var(--p-banner-max-w, 100ch)) !important;
  height: auto !important;
  max-width: 100% !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  z-index: var(--p-internal-banner-z-index,99) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
  visibility: hidden !important;
  pointer-events: none !important;
  transform: translate3d(-50%,calc(var(--p-banner-position-bottom,56px) + 100%),0) !important;
  transition: visibility 0s linear var(--p-transition-duration, .6s), transform var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) !important;
}
:host::backdrop {
  display: none !important;
}
:host > :first-child {
  opacity: 0 !important;
  box-shadow: 0px 8px 40px rgba(0,0,0,.16) !important;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(min-width:760px) {
  :host {
    inset: var(--p-banner-position-top,56px) auto auto 50vw !important;
    transform: translate3d(-50%,calc(-100% - var(--p-banner-position-top,56px)),0) !important;
  }
}

@media(min-width:1920px) {
  :host {
    inset-inline: 50vw auto !important;
  }
}

@supports (transition-behavior: allow-discrete) {
  :host {
    transition: visibility 0s linear var(--p-transition-duration, .6s), transform var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete !important;
  }
  :host > :first-child {
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true 1`] = `
":host {
  display: block;
  all: unset !important;
  position: fixed !important;
  margin: 0 !important;
  padding: 0 !important;
  inset: auto auto var(--p-banner-position-bottom,56px) 50vw !important;
  width: min(calc(100vw - 2 * var(--p-banner-offset-inline, max(22px, 10.625vw - 12px))), var(--p-banner-max-w, 100ch)) !important;
  height: auto !important;
  max-width: 100% !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  z-index: var(--p-internal-banner-z-index,99) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
  visibility: inherit !important;
  pointer-events: inherit !important;
  transform: translate3d(-50%,0,0) !important;
  transition: visibility 0s linear var(--p-transition-duration, 0s), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1) !important;
}
:host::backdrop {
  display: none !important;
}
:host > :first-child {
  opacity: 1 !important;
  box-shadow: 0px 8px 40px rgba(0,0,0,.16) !important;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(min-width:760px) {
  :host {
    inset: var(--p-banner-position-top,56px) auto auto 50vw !important;
  }
}

@media(min-width:1920px) {
  :host {
    inset-inline: 50vw auto !important;
  }
}

@supports (transition-behavior: allow-discrete) {
  :host {
    transition: visibility 0s linear var(--p-transition-duration, 0s), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete !important;
  }
  :host > :first-child {
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete !important;
  }
}
"
`;
